--- a/src/app/document-scanner/document-scanner.component.html
+++ b/src/app/document-scanner/document-scanner.component.html
@@ -72,8 +72,9 @@
 <!-- Display drew contour -->
 <img *ngIf="contourImage" [src]="contourImage" alt="Scanned Document" />
 
-<!-- Display drew rectangle -->
-<img *ngIf="outputImage" [src]="outputImage" alt="Scanned Document" />
+<h3>Diaplay yolo</h3>
+<!-- Display yolo -->
+<img *ngIf="yoloImage" [src]="yoloImage" alt="Scanned Document" />
 
 <h1>Download Photo</h1>
 <button class="button-6" (click)="downloadPhoto()">Download Photo</button>
