add : realtime yolo button

--- a/src/app/document-scanner/document-scanner.component.html
+++ b/src/app/document-scanner/document-scanner.component.html
@@ -28,6 +28,10 @@
   <button class="button-6" (click)="rotateImage()" [disabled]="!cameraActive">
     Rotate Image 90°
   </button>
+  <button class="button-6" (click)="realTimeYOLO()" [disabled]="!cameraActive">
+    Real-Time YOLO
+  </button>
+  
 </div>
 
 <div>
